--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -1,5 +1,20 @@
-$body-bg:	#34495e;
-$navbar-inverse-bg: #2c3e50;
-$navbar-inverse-link-color: #fff;
+@import url(http://fonts.googleapis.com/css?family=Raleway:400,700);
+
+$body-bg:                                                   #ecf0f1;
+$font-family-sans-serif:                'Helvetica Neue', Helvetica, Arial, sans-serif;
+$navbar-height:                                        45px;
+$navbar-default-bg:                          white;
+$navbar-default-brand-color:      #c0392b;
+$brand-primary:                                    #c0392b;
+$jumbotron-bg:                                         white;
+
 
 @import 'bootstrap';
+
+.center {
+	text-align: center;
+}
+
+.navbar-brand {
+     font-weight: bold;
+}
